--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "athena-express",
-  "version": "7.1.0",
+  "name": "@dictcp/athena-express",
+  "version": "7.2.0-alpha1",
   "description": "Athena-Express makes it easier to execute SQL queries on Amazon Athena by consolidating & astracting several methods in the AWS SDK",
   "main": "./lib/index.js",
   "types": "./index.d.ts",
